<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_auth">

    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.aytona.foodspotter.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aytona.foodspotter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.aytona.foodspotter.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.aytona.foodspotter.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aytona.foodspotter.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.aytona.foodspotter.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_add_stall"
        android:name="com.aytona.foodspotter.ui.addstall.AddStallFragment"
        android:label="@string/title_add_stall"
        tools:layout="@layout/fragment_add_stall" />
</navigation>